--- a/Main.HTML
+++ b/Main.HTML
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nithilagam Homestays</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet"> 
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Lora', serif; /* Use Lora for body text */
             margin: 0;
             padding: 0;
             color: #333;
+            line-height: 1.6;
         }
 
         .container {
@@ -21,13 +24,14 @@
 
         header {
             text-align: center;
-            padding: 50px 0;
-            background-color: #f8f8f8;
+            padding: 0; /* Remove padding for the hero image */
         }
 
         h1 {
+            font-family: 'Playfair Display', serif; /* Use Playfair Display for headings */
             font-size: 3rem;
-            font-weight: 600;
+            font-weight: 700;
+            margin-bottom: 10px;
         }
 
         p {
@@ -36,8 +40,9 @@
         }
 
         h2 {
+            font-family: 'Playfair Display', serif;
             font-size: 2rem;
-            font-weight: 600;
+            font-weight: 700;
             margin-bottom: 20px;
         }
 
@@ -61,6 +66,17 @@
 
         .rooms .room {
             margin-top: 30px;
+            display: flex; /* Arrange room image and details side-by-side */
+            align-items: flex-start;
+        }
+
+        .rooms .room img {
+            width: 40%; /* Adjust image width as needed */
+            margin-right: 20px;
+        }
+
+        .rooms .room .room-details {
+            width: 60%; /* Adjust details width as needed */
         }
 
         .reviews blockquote {
@@ -76,24 +92,78 @@
 
         .button {
             display: inline-block;
-            background-color: #007bff;
+            background-color: #333; /* Darker button color */
             color: white;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
-            margin-top: 30px;
+            margin-top: 20px;
+            font-weight: 600;
+            transition: background-color 0.3s; /* Add smooth transition */
+        }
+
+        .button:hover {
+            background-color: #555; /* Slightly lighter on hover */
         }
 
         .text-center {
             text-align: center;
+        }
+
+        .hero { /* Style the hero section */
+            background-size: cover;
+            background-position: center;
+            color: white;
+            padding: 100px 0; /* Adjust padding as needed */
+            text-align: center;
+        }
+
+        .map-container {
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            overflow: hidden;
+            margin-top: 20px;
+        }
+
+        .map-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Add styles for your contact form as needed */
+        .contact-form input[type="text"],
+        .contact-form input[type="email"],
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button[type="submit"] {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Nithilagam Homestays</h1>
-            <p>Experience the tranquility and comfort of Nithilagam Homestays, located in the beautiful region of India. Perfect for families, couples, and solo travelers, our homestay offers a serene escape from the hustle and bustle of city life.</p>
+            <div class="hero" style="background-image: url('https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg');"> 
+                <h1>Nithilagam Homestays</h1>
+                <p>Indulge in the serenity and refined comfort of Nithilagam Homestays, a haven of tranquility nestled amidst the breathtaking landscapes of India. Our exclusive retreat offers discerning travelers an unforgettable escape, where personalized service and exquisite accommodations create an experience of unparalleled luxury.</p>
+                <a class="button" href="#">Explore Our Sanctuary</a>
+            </div>
         </header>
 
         <section class="highlights">
@@ -112,20 +182,35 @@
         </section>
 
         <section class="rooms">
-            <h2>Room Types</h2>
+            <h2>Exquisite Accommodations</h2>
             <div class="room">
-                <h3>Deluxe Double Room with Balcony</h3>
-                <p><strong>Room Size:</strong> 20 m²</p>
-                <p><strong>Bed:</strong> 1 large double bed</p>
-                <p><strong>Amenities:</strong> Balcony, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Double Room">
+                <div class="room-details">
+                    <h3>Deluxe Double Room with Balcony</h3>
+                    <p>Retreat to the comfort of our Deluxe Double Room, featuring a private balcony overlooking lush gardens. Impeccably designed with plush furnishings and modern amenities, this sanctuary offers a serene escape.</p>
+                    <ul>
+                        <li>Spacious 20 m² room</li>
+                        <li>Plush king-size bed</li>
+                        <li>Private balcony with garden views</li>
+                        <li>Luxurious en-suite bathroom</li>
+                        <li>Complimentary Wi-Fi</li>
+                    </ul>
+                    <a href="#" class="button">View Details</a>
+                </div>
             </div>
             <div class="room">
-                <h3>Family Room with Garden View</h3>
-                <p><strong>Room Size:</strong> 30 m²</p>
-                <p><strong>Bed:</strong> 2 large double beds</p>
-                <p><strong>Amenities:</strong> Garden view, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Family Room">
+                <div class="room-details">
+                    <h3>Family Room with Garden View</h3>
+                <p>Create lasting memories with your loved ones in our spacious Family Room, offering breathtaking views of the surrounding gardens. Thoughtfully designed for comfort and relaxation, this haven provides ample space for everyone to unwind.</p>
+                <ul>
+                    <li>Expansive 30 m² room</li>
+                    <li>Two plush queen-size beds</li>
+                    <li>Panoramic garden views</li>
+                    <li>Elegant en-suite bathroom</li>
+                    <li>Complimentary Wi-Fi</li>
+                </ul>
+                <a href="#" class="button">View Details</a>
             </div>
         </section>
 
@@ -143,8 +228,13 @@
         <section class="location">
             <h2>Location</h2>
             <p>Nithilagam Homestays is ideally situated, offering easy access to popular attractions and essential amenities.</p>
-            <p><strong>Address:</strong> [Insert Address Here]</p>
-            <p><strong>Nearby Attractions:</strong> [List Nearby Attractions Here]</p>
+            <p><strong>Address:</strong> 173/48, Kosamadam Street, Mathalangulam, Tiruvannamalai, Tamil Nadu 606601</p>
+            <p><strong>Nearby Attractions:</strong> Arunachaleswara Temple, Ramana Ashram, Girivalam Path</p>
+
+            <div class="map-container"> 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.326636015959!2d79.69519691484367!3d12.652859090821943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad47e1d91d2147%3A0x732b7a45579aa6c4!2sTiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1692258760986!5m2!1sen!2sin" 
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
 
         <div class="text-center">
@@ -156,7 +246,15 @@
         <section class="contact">
             <h2>Contact Us</h2>
             <p>For any inquiries or further information, please contact us:</p>
-            <p><strong>Phone:</strong> [Insert Phone Number Here]</p>
+            
+            <form class="contact-form" action="[Your form submission URL]" method="post"> 
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+
+            <p><strong>Phone:</strong> +91 [Insert Phone Number Here]</p> 
             <p><strong>Email:</strong> [Insert Email Address Here]</p>
         </section>
     </div>
