--- a/Main.HTML
+++ b/Main.HTML
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nithilagam Homestays</title>
+    <link rel="icon" href="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/download.jpeg" type="image/jpeg"> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet"> 
     <style>
         body {
-            font-family: 'Lora', serif; /* Use Lora for body text */
+            font-family: 'Lora', serif; 
             margin: 0;
             padding: 0;
             color: #333;
@@ -24,11 +25,11 @@
 
         header {
             text-align: center;
-            padding: 0; /* Remove padding for the hero image */
+            padding: 0; 
         }
 
         h1 {
-            font-family: 'Playfair Display', serif; /* Use Playfair Display for headings */
+            font-family: 'Playfair Display', serif; 
             font-size: 3rem;
             font-weight: 700;
             margin-bottom: 10px;
@@ -66,24 +67,17 @@
 
         .rooms .room {
             margin-top: 30px;
-            display: flex; /* Arrange room image and details side-by-side */
+            display: flex; 
             align-items: flex-start;
         }
 
         .rooms .room img {
-            width: 40%; /* Adjust image width as needed */
+            width: 40%; 
             margin-right: 20px;
         }
 
         .rooms .room .room-details {
-            width: 60%; /* Adjust details width as needed */
-        }
-
-        .reviews blockquote {
-            border-left: 5px solid #007bff;
-            padding-left: 15px;
-            margin: 20px 0;
-            font-style: italic;
+            width: 60%; 
         }
 
         .contact {
@@ -92,29 +86,29 @@
 
         .button {
             display: inline-block;
-            background-color: #333; /* Darker button color */
+            background-color: #333; 
             color: white;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
             margin-top: 20px;
             font-weight: 600;
-            transition: background-color 0.3s; /* Add smooth transition */
+            transition: background-color 0.3s; 
         }
 
         .button:hover {
-            background-color: #555; /* Slightly lighter on hover */
+            background-color: #555; 
         }
 
         .text-center {
             text-align: center;
         }
 
-        .hero { /* Style the hero section */
+        .hero { 
             background-size: cover;
             background-position: center;
             color: white;
-            padding: 100px 0; /* Adjust padding as needed */
+            padding: 100px 0; 
             text-align: center;
         }
 
@@ -122,7 +116,7 @@
             position: relative;
             width: 100%;
             height: 0;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            padding-bottom: 56.25%; 
             overflow: hidden;
             margin-top: 20px;
         }
@@ -153,6 +147,32 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+        }
+
+        /* Table styling for a posh look */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 30px;
+            font-family: 'Lora', serif;
+        }
+
+        th, td {
+            padding: 15px;
+            text-align: left;
+            border-bottom: 1px solid #eee; /* Light gray border */
+        }
+
+        th {
+            background-color: #f5f5f5; /* Light background for headers */
+            font-weight: bold;
+        }
+
+        table caption {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-align: center;
         }
     </style>
 </head>
@@ -202,28 +222,62 @@
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Family Room">
                 <div class="room-details">
                     <h3>Family Room with Garden View</h3>
-                <p>Create lasting memories with your loved ones in our spacious Family Room, offering breathtaking views of the surrounding gardens. Thoughtfully designed for comfort and relaxation, this haven provides ample space for everyone to unwind.</p>
-                <ul>
-                    <li>Expansive 30 m² room</li>
-                    <li>Two plush queen-size beds</li>
-                    <li>Panoramic garden views</li>
-                    <li>Elegant en-suite bathroom</li>
-                    <li>Complimentary Wi-Fi</li>
-                </ul>
-                <a href="#" class="button">View Details</a>
+                    <p>Create lasting memories with your loved ones in our spacious Family Room, offering breathtaking views of the surrounding gardens. Thoughtfully designed for comfort and relaxation, this haven provides ample space for everyone to unwind.</p>
+                    <ul>
+                        <li>Expansive 30 m² room</li>
+                        <li>Two plush queen-size beds</li>
+                        <li>Panoramic garden views</li>
+                        <li>Elegant en-suite bathroom</li>
+                        <li>Complimentary Wi-Fi</li>
+                    </ul>
+                    <a href="#" class="button">View Details</a>
+                </div>
             </div>
-        </section>
+        </section>        
 
-        <section class="reviews">
-            <h2>Guest Reviews</h2>
-            <p>Our guests love staying at Nithilagam Homestays. Here’s what they have to say:</p>
-            <blockquote>
-                <p><strong>John, United States:</strong> "Excellent stay! The rooms were clean and the staff was very friendly. Would definitely recommend."</p>
-            </blockquote>
-            <blockquote>
-                <p><strong>Priya, India:</strong> "A peaceful retreat with all the comforts of home. The garden view from our room was stunning."</p>
-            </blockquote>
-        </section>
+        <table> 
+            <caption>House Rules</caption>
+            <tr>
+                <th>Check-in</th>
+                <td>From 14:00 to 18:00</td>
+            </tr>
+            <tr>
+                <th>Check-out</th>
+                <td>From 08:00 to 11:00</td>
+            </tr>
+            <tr>
+                <th>Cancellation/ prepayment</th>
+                <td>Cancellation and prepayment policies vary according to accommodation type. Please enter the dates of your stay and check the conditions of your required option.</td>
+            </tr>
+            <tr>
+                <th>Children and beds</th>
+                <td>
+                    <ul>
+                        <li>Children of any age are welcome.</li>
+                        <li>Children 13 years and above will be charged as adults at this property.</li>
+                        <li>To see correct prices and occupancy information, please add the number of children in your group and their ages to your search.</li>
+                        <li>Cots and extra beds are not available at this property.</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th>No age restriction</th>
+                <td>There is no age requirement for check-in</td>
+            </tr>
+            <tr>
+                <th>Pets</th>
+                <td>Pets are not allowed.</td>
+            </tr>
+            <tr>
+                <th>Smoking</th>
+                <td>Smoking is not allowed.</td>
+            </tr>
+            <tr>
+                <th>Parties</th>
+                <td>Parties/events are not allowed</td>
+            </tr>
+        </table>
+
 
         <section class="location">
             <h2>Location</h2>
@@ -232,7 +286,7 @@
             <p><strong>Nearby Attractions:</strong> Arunachaleswara Temple, Ramana Ashram, Girivalam Path</p>
 
             <div class="map-container"> 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.326636015959!2d79.69519691484367!3d12.652859090821943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad47e1d91d2147%3A0x732b7a45579aa6c4!2sTiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1692258760986!5m2!1sen!2sin" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15549.30337654843!2d79.695197!3d12.652859!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad47e1d91d2147%3A0x732b7a45579aa6c4!2sNithilagam%20Homestays!5e0!3m2!1sen!2sin!4v1692336726240!5m2!1sen!2sin"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
