--- a/Main.HTML
+++ b/Main.HTML
@@ -9,170 +9,75 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet"> 
     <style>
-        body {
-            font-family: 'Lora', serif; 
-            margin: 0;
-            padding: 0;
-            color: #333;
-            line-height: 1.6;
-        }
+        /* ... Your Existing Styles ... */
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            padding: 0; 
-        }
-
-        h1 {
-            font-family: 'Playfair Display', serif; 
-            font-size: 3rem;
-            font-weight: 700;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-        }
-
-        h2 {
-            font-family: 'Playfair Display', serif;
-            font-size: 2rem;
-            font-weight: 700;
-            margin-bottom: 20px;
-        }
-
-        .highlights ul {
-            list-style: disc;
-            margin-left: 20px;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .grid img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .rooms .room {
-            margin-top: 30px;
-            display: flex; 
-            align-items: flex-start;
-        }
-
-        .rooms .room img {
-            width: 40%; 
-            margin-right: 20px;
-        }
-
-        .rooms .room .room-details {
-            width: 60%; 
-        }
-
-        .contact {
-            margin-top: 50px;
-        }
-
-        .button {
-            display: inline-block;
-            background-color: #333; 
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-            font-weight: 600;
-            transition: background-color 0.3s; 
-        }
-
-        .button:hover {
-            background-color: #555; 
-        }
-
-        .text-center {
-            text-align: center;
-        }
-
-        .hero { 
+        /* Deskpass-inspired styles */
+        .hero {
             background-size: cover;
             background-position: center;
             color: white;
-            padding: 100px 0; 
             text-align: center;
+            padding: 150px 0; /* Increased padding for a grander feel */
+            position: relative; /* For overlay */
         }
 
-        .map-container {
-            position: relative;
-            width: 100%;
-            height: 0;
-            padding-bottom: 56.25%; 
-            overflow: hidden;
-            margin-top: 20px;
-        }
-
-        .map-container iframe {
+        .hero::before { /* Overlay */
+            content: "";
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+            background-color: rgba(0, 0, 0, 0.4); /* Adjust opacity as needed */
         }
 
-        /* Add styles for your contact form as needed */
-        .contact-form input[type="text"],
-        .contact-form input[type="email"],
-        .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        .hero h1, .hero p {
+            position: relative; /* Place text on top of overlay */
+            z-index: 1;
         }
 
-        .contact-form button[type="submit"] {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        /* Table styling for a posh look */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 30px;
-            font-family: 'Lora', serif;
-        }
-
-        th, td {
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #eee; /* Light gray border */
-        }
-
-        th {
-            background-color: #f5f5f5; /* Light background for headers */
-            font-weight: bold;
-        }
-
-        table caption {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 10px;
+        section {
+            padding: 80px 0; /* Increased padding for sections */
             text-align: center;
+        }
+
+        section:nth-child(even) { /* Alternate background colors */
+            background-color: #f5f5f5;
+        }
+
+        .highlights .grid {
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid */
+        }
+
+        .highlights .grid img {
+            height: 250px; /* Consistent image height */
+            object-fit: cover;
+        }
+
+        .rooms .room {
+            flex-direction: column; /* Stack image and details vertically on smaller screens */
+            align-items: center;
+            text-align: center;
+        }
+
+        @media (min-width: 768px) {
+            .rooms .room {
+                flex-direction: row; /* Side-by-side on larger screens */
+                text-align: left;
+            }
+        }
+
+        .button {
+            background-color: #007bff; /* Blue button */
+            color: white;
+            padding: 12px 25px;
+            border-radius: 5px;
+            font-weight: 600;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -181,40 +86,43 @@
         <header>
             <div class="hero" style="background-image: url('https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg');"> 
                 <h1>Nithilagam Homestays</h1>
-                <p>Indulge in the serenity and refined comfort of Nithilagam Homestays, a haven of tranquility nestled amidst the breathtaking landscapes of India. Our exclusive retreat offers discerning travelers an unforgettable escape, where personalized service and exquisite accommodations create an experience of unparalleled luxury.</p>
-                <a class="button" href="#">Explore Our Sanctuary</a>
-            </div>
+                <p>Indulge in tranquility and refined comfort.</p>
+                <a class="button" href="#">Book Your Stay</a> </div>
         </header>
 
         <section class="highlights">
             <h2>Property Highlights</h2>
-            <ul>
-                <li><strong>Free WiFi:</strong> Stay connected with our high-speed internet.</li>
-                <li><strong>Family Rooms:</strong> Spacious accommodations perfect for families.</li>
-                <li><strong>Free Parking:</strong> Convenient parking for all guests.</li>
-                <li><strong>Non-Smoking Rooms:</strong> Enjoy a clean, smoke-free environment.</li>
-            </ul>
             <div class="grid">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg" alt="Property 1">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_2.jpg" alt="Property 2">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_3.jpg" alt="Property 3">
+                <div>
+                    <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/icon-wifi.png" alt="Free WiFi">
+                    <h3>Free WiFi</h3>
+                    <p>Stay connected with our high-speed internet.</p>
+                </div>
+                <div>
+                    <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/icon-family.png" alt="Family Rooms">
+                    <h3>Family Rooms</h3>
+                    <p>Spacious accommodations perfect for families.</p>
+                </div>
+                <div>
+                    <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/icon-parking.png" alt="Free Parking">
+                    <h3>Free Parking</h3>
+                    <p>Convenient parking for all guests.</p>
+                </div>
+                <div>
+                    <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/icon-non-smoking.png" alt="Non-Smoking Rooms">
+                    <h3>Non-Smoking Rooms</h3>
+                    <p>Enjoy a clean, smoke-free environment.</p>
+                </div>
             </div>
         </section>
 
-        <section class="rooms">
+        <section class="rooms" style="background-color: #f5f5f5;">
             <h2>Exquisite Accommodations</h2>
             <div class="room">
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Double Room">
                 <div class="room-details">
                     <h3>Deluxe Double Room with Balcony</h3>
-                    <p>Retreat to the comfort of our Deluxe Double Room, featuring a private balcony overlooking lush gardens. Impeccably designed with plush furnishings and modern amenities, this sanctuary offers a serene escape.</p>
-                    <ul>
-                        <li>Spacious 20 m² room</li>
-                        <li>Plush king-size bed</li>
-                        <li>Private balcony with garden views</li>
-                        <li>Luxurious en-suite bathroom</li>
-                        <li>Complimentary Wi-Fi</li>
-                    </ul>
+                    <p>Retreat to the comfort of our Deluxe Double Room, featuring a private balcony overlooking lush gardens.</p>
                     <a href="#" class="button">View Details</a>
                 </div>
             </div>
@@ -222,14 +130,7 @@
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Family Room">
                 <div class="room-details">
                     <h3>Family Room with Garden View</h3>
-                    <p>Create lasting memories with your loved ones in our spacious Family Room, offering breathtaking views of the surrounding gardens. Thoughtfully designed for comfort and relaxation, this haven provides ample space for everyone to unwind.</p>
-                    <ul>
-                        <li>Expansive 30 m² room</li>
-                        <li>Two plush queen-size beds</li>
-                        <li>Panoramic garden views</li>
-                        <li>Elegant en-suite bathroom</li>
-                        <li>Complimentary Wi-Fi</li>
-                    </ul>
+                    <p>Create lasting memories with your loved ones in our spacious Family Room.</p>
                     <a href="#" class="button">View Details</a>
                 </div>
             </div>
@@ -278,7 +179,6 @@
             </tr>
         </table>
 
-
         <section class="location">
             <h2>Location</h2>
             <p>Nithilagam Homestays is ideally situated, offering easy access to popular attractions and essential amenities.</p>
@@ -297,7 +197,7 @@
             </a>
         </div>
 
-        <section class="contact">
+        <section class="contact"  style="background-color: #f5f5f5;">
             <h2>Contact Us</h2>
             <p>For any inquiries or further information, please contact us:</p>
             
